<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="add_dualapp">Add</string>
    <string name="alert_phone_permission">Version update and user feedback functions require privilege to access to device ID of your mobile phone!</string>
    <string name="app_name">Rack Ghost</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="choose">Choose</string>
    <string name="choose_category_other">Other</string>
    <string name="choose_category_recd">Recommend</string>
    <string name="choose_empty">Chooser is Empty</string>
    <string name="click_to_retry">Retry</string>
    <string name="define_smoothprogressbar" />
    <string name="drawer_menu_about">About</string>
    <string name="drawer_menu_comment">Rate us</string>
    <string name="drawer_menu_feedback">Feedback</string>
    <string name="drawer_menu_help">Help</string>
    <string name="drawer_menu_share">Share</string>
    <string name="dual_menu_delete">Delete</string>
    <string name="dual_menu_shortcut">ShortCut</string>
    <string name="feedback_action">Send</string>
    <string name="feedback_contact_hint">E-Mail</string>
    <string name="feedback_content_hint">Enter your suggestion please…</string>
    <string name="feedback_title">@string/drawer_menu_feedback</string>
    <string name="google_app_link">http://almanac.flabcore.com</string>
    <string name="guide_text">SPACE GHOST V.1</string>
    <string name="jdeferred">jdeferred</string>
    <string name="library_smoothprogressbar_author">Varballet</string>
    <string name="library_smoothprogressbar_authorWebsite">http://almanac.flabcore.com</string>
    <string name="library_smoothprogressbar_isOpenSource">true</string>
    <string name="library_smoothprogressbar_libraryDescription">Small library allowing you to make a smooth indeterminate progress bar. You can either user your progress bars and set this drawable or use directly the SmoothProgressBarView.</string>
    <string name="library_smoothprogressbar_libraryName">SmoothProgressBar</string>
    <string name="library_smoothprogressbar_libraryVersion">1.0.0</string>
    <string name="library_smoothprogressbar_libraryWebsite">http://almanac.flabcore.com</string>
    <string name="library_smoothprogressbar_licenseId">apache_2_0</string>
    <string name="library_smoothprogressbar_repositoryLink">http://almanac.flabcore.com</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="noApplications">No find applications</string>
    <string name="owner_name">Admin</string>
    <string name="preparing">Opening the app…</string>
    <string name="rate_app_feedback">Feedback</string>
    <string name="rate_app_message">If you like Shadow</string>
    <string name="rate_app_message2">Rate us please!</string>
    <string name="rate_app_rate_now">Rate now</string>
    <string name="setting_feedback_contacts_null">Invalid email id</string>
    <string name="setting_feedback_dialog_thank">Thanks for your feedback</string>
    <string name="setting_feedback_message_null">Content can not be empty</string>
    <string name="setting_feedback_network_error">Network unavailable</string>
    <string name="setting_privacy_policy">visit website</string>
    <string name="setting_upgrade_already_lasted">You have installed the latest version</string>
    <string name="setting_upgrade_btn_cancel">Download later</string>
    <string name="setting_upgrade_btn_ok">Download and Install</string>
    <string name="setting_upgrade_new_version">New version:<g id="version">%1$s</g></string>
    <string name="setting_upgrade_title">New Version</string>
    <string name="share_app_content">"Try it now! Private System is designed for easy use so you can encrypt your personal information quickly. It's available now on Android, get it free!"</string>
    <string name="shutcut_has_no_exist">\u0009 has not add to Shadow</string>
    <item type="string" name="spb_default_speed">1.0</item>
    <string name="success">Success</string>
    <string name="virtual_installer">VirtualPackage Installer</string>
</resources>
