<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="19.0sp" android:textColor="@android:color/black" android:id="@id/find_new_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/setting_upgrade_title" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="80.0dip" android:layout_marginTop="10.0dip">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginRight="30.0dip">
            <TextView android:textSize="16.0sp" android:textColor="@color/fineos_item_default_text" android:gravity="center" android:id="@id/new_version" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/setting_upgrade_new_version" />
            <TextView android:textSize="16.0sp" android:textColor="@color/fineos_item_default_text" android:gravity="center" android:id="@id/release_notes" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/setting_upgrade_title" />
        </LinearLayout>
    </ScrollView>
    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_update" />
    <TextView android:textSize="16.0sp" android:textColor="@android:color/white" android:gravity="center" android:id="@id/update_btn" android:background="@drawable/select_btn_up_now" android:layout_width="170.0dip" android:layout_height="40.0dip" android:layout_marginLeft="60.0dip" android:layout_marginTop="40.0dip" android:layout_marginRight="60.0dip" android:text="@string/setting_upgrade_btn_ok" android:textAlignment="center" />
    <TextView android:textSize="16.0sp" android:textColor="@color/fineos_item_default_text" android:gravity="center" android:id="@id/cancel_btn" android:background="@drawable/select_btn_up_later" android:layout_width="170.0dip" android:layout_height="40.0dip" android:layout_marginLeft="60.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="60.0dip" android:layout_marginBottom="30.0dip" android:text="@string/setting_upgrade_btn_cancel" android:textAlignment="center" />
</LinearLayout>